--- a/src/frontend/components/video-card/video-card.css
+++ b/src/frontend/components/video-card/video-card.css
@@ -1,6 +1,6 @@
 .vdo-card-container,.vdo-link{
    width: 270px;
-    margin: .5rem;
+    /* margin: .5rem; */
     cursor: pointer;
     color: inherit;
 }
@@ -39,6 +39,9 @@
     font-weight: 400;
     margin-left: 1ch;
 }
+.vdo-link{
+    margin: 0px;
+}
 .vdo-detail{
     display: flex;
     align-items: center;
@@ -56,4 +59,9 @@
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+}
+@media (max-width:425px) {
+    .vdo-card-container,.vdo-link{
+        width: 100%;
+    }
 }
