--- a/src/frontend/pages/video-player/video-player.css
+++ b/src/frontend/pages/video-player/video-player.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     /* overflow-y: scroll; */
     max-width: 100%;
     box-sizing: border-box;
@@ -18,7 +18,7 @@
     padding: 24px 24px 0px 0px;
 }
 
-@media (max-width: 1020px) {
+@media (max-width: 770px) {
     .video-player-container{
         flex-direction: column;
         justify-content: flex-start;
