--- a/src/frontend/pages/css/auth.css
+++ b/src/frontend/pages/css/auth.css
@@ -60,3 +60,12 @@
     font-weight: 500;
     text-align: center;
 }
+.auth-btn-guest{
+    margin-left: .5rem;
+    /* background-color: inherit; */
+    background-color: lightgray;
+    color:red;
+    font-weight: 500;
+    border: 1.5px solid red;
+    padding: 2.5px 6px;
+}
