--- a/src/frontend/pages/video-player/video-player.css
+++ b/src/frontend/pages/video-player/video-player.css
@@ -5,7 +5,9 @@
     /* height: 100vh; */
     /* overflow-y: scroll; */
     max-width: 100%;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
+    padding-bottom: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 .vedio-player{
     width: 60%;
